# fonticon-cookiecutter

./: cookiecutter.json
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: bundle.py  setup.cfg
{{cookiecutter.project_name}}/tests/: test_fonts.py
