
[metadata]
name = {{cookiecutter.project_name}}
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
description = {{cookiecutter.project_short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
license = {{cookiecutter.license}}
version = 0.0.1
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
* = *.otf, *.ttf

[options.entry_points]
superqt.fonticon =
    # example 
    # short_key = {{cookiecutter.project_slug}}:SomeEnum
    # fa5r = fonticon_fa5:FA5Regular

[options.extras_require]
testing =
    pytest

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = {{cookiecutter.project_slug}}
